objects/MultiLinkContactChild_del__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MultiLinkContactChildren</relationshipLabel>
        <relationshipName>MultiLinkContactChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MultiLinkContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MultiLinkContact</label>
        <referenceTo>MultiLinkContact_del__c</referenceTo>
        <relationshipLabel>MultiLinkContactChildren</relationshipLabel>
        <relationshipName>MultiLinkContactChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MultiLinkContactChild</label>
    <nameField>
        <label>MultiLinkContactChild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MultiLinkContactChildren</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>